[package]
name = "spacekit-quantum-verkle-tree"
version = "0.1.0"
edition = "2021"
description = "SpaceKit Quantum Verkle Tree, a quantum-safe verkle tree implementation."
license = "MIT OR Apache-2.0"
repository = "https://github.com/spacekit-xyz/spacekit-quantum-verkle"
readme = "README.md"

[lib]
name = "spacekit_quantum_verkle"
path = "src/lib.rs"

[dependencies]
alloy-primitives = "1.0"
hex = "0.4.3"
hashbrown = { version = "0.14.5", default-features = false, features = ["alloc"] }
serde = { version = "1.0.213", default-features = false, features = ["derive", "alloc"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "1.0.64"
postcard = { version = "1.0.8", optional = true, features = ["alloc"] }
nybbles = "0.3.0"
foldhash = "0.1.3"

[features]
default = ["std"]
std = [
  "serde/std",
]
serde = ["dep:postcard"]

[dev-dependencies]
proptest = "1.5.0"
criterion = "0.5.1"

[[bench]]
name = "verkle_bench"
harness = false