[package]
name = "spacekit-quantum-verkle-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.7"
spacekit-quantum-verkle = { path = ".." }

[[bin]]
name = "proof_deserialize"
path = "fuzz_targets/proof_deserialize.rs"
test = false
doc = false
